fix blocks overlapping

--- a/web/app/themes/limerock/src/scss/layout/_common.scss
+++ b/web/app/themes/limerock/src/scss/layout/_common.scss
@@ -256,3 +256,7 @@ div.swiper-button-next {
     right: -8px;
   }
 }
+
+div {
+  unicode-bidi: normal;
+}
